    as static library
  * Now providing a shared library and not only a static library
  * The shared library is provided in the liboidc-agent2 package, the needed
    development files in the liboidc-agent-dev package
  * Fixed invalid read in stringToJSON
  * Fixed possible double frees when the already set value is passed to a
    setter
  * Fixed missing authentication for device code access token requests
  * Now allowing using OIDPs that support the device flow, but don't advertise
    it by using the oidc-gen --dae option
  * Improved UX: checking if oidc-gen can connect to agent before prompting
    the user for any information
  * Support for IPC encryption: oidc-add and oidc-gen now only communicate in
    an encrypted way with oidc-agent
  * Fixed a bug where the grant_type parameter was falsly included in the auth
    code url
  * Improved the account listing output

  [ Gabriel Zachmann ]
  * Fixed a bug causing problems with the device flow
  * Fixed memory leaks

  [ Gabriel Zachmann ]
  * Fixed a bug due to which errors during token revocation were ignored
  * Fixed a bug displaying a (wrong) error message when token revocation
    succeeded and the server answered with an empty response when using
    encrypted ipc communication 
  * Fixed a bug where the browser would not redirect to the webserver when the
    chosen port was to high
  * Fixed a sementation fault if the config tmp file did not contain the
    account shortname
  * Fixed broken bash-completion when oidcdir did not yet exist 

  [ Gabriel Zachmann ]
  * Fixed build error if bin dir not existed
  * Fixed a problem with unity OP where access token did not have any scope
  * Fixed strange additional parameters in the auth code exchange request 
  * Fixed superfluous error logs when checking if a string is a json object
  * Changed encoding for memory encryption from hex to base64 

 -- Marcus Hardt <hardt@kit.edu>  Thu, 13 Dec 2018 13:57:47 +0100