@@ -151,4 +151,8 @@ oidc-agent (2.1.3) UNRELEASED; urgency=medium
   * Fixed superfluous error logs when checking if a string is a json object
   * Changed encoding for memory encryption from hex to base64 
 
- -- Marcus Hardt <hardt@kit.edu>  Thu, 13 Dec 2018 13:57:47 +0100
+  [ Gabriel Zachmann ]
+  * Fixed a bug due to which oidc-agent would return a wrong already loaded
+    account config when generating a new account config
+
+ -- Marcus Hardt <hardt@kit.edu>  Wen, 16 Jan 2019 15:05:07 +0100
